--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   carousel_slider: ^4.0.0
+  animate_do: ^2.0.0
 
 dev_dependencies:
   flutter_test:
